--- a/Report/title_abstract.tex
+++ b/Report/title_abstract.tex
@@ -39,9 +39,18 @@
 \end{titlepage}
 
 % ============================================================================
-% ABSTRACT
+% TABLE OF CONTENTS AND LISTS
 % ============================================================================
 \newpage
+\tableofcontents
+\newpage
+\listoffigures
+\listoftables
+\newpage
+
+% ============================================================================
+% ABSTRACT
+% ============================================================================
 \begin{abstract}
 \sloppy
 \noindent
@@ -51,6 +60,4 @@ This project presents a comprehensive study on object detection for Brain MRI im
 \noindent\textbf{Keywords:} Object Detection, Brain MRI, Semi-Supervised Learning, Self-Supervised Learning, YOLO, SimCLR, DINOv3, Pseudo-Labeling, Medical Imaging
 \end{abstract}
 
-\newpage
-\tableofcontents
 \newpage
